# delphi-screen-record

./: .gitignore  docker-compose.yml  package-lock.json  replit.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/data/: database.py  db.py  models.py
backend/app/data/models/: recordings.py  users.py
backend/app/data/schemas/: recordings.py  users.py
backend/app/messaging/: candidate_invitation_consumer.py
backend/app/repositories/: recordings_repository.py  user_repository.py
backend/app/routes/: recordings.py  users.py
backend/app/utils/: types.py
client/src/: App.tsx  index.css
client/src/components/: permission-dialog.tsx  recent-recordings.tsx  recording-controls.tsx  recording-options.tsx  recording-preview.tsx  sidebar.tsx  video-preview-modal.tsx
client/src/hooks/: use-screen-recording.tsx
client/src/lib/: queryClient.ts  storage-utils.ts
client/src/pages/: record.tsx  recordings.tsx
server/: routes.ts  storage.ts
service/: GCS_SETUP.md  MESSAGING_SETUP.md  VIDEO_PROCESSING.md  pyproject.toml
service/app/: dependencies.py  gcp.json  main.py
service/app/data/: database.py
service/app/messaging/: __init__.py  candidate_invitation_consumer.py
service/app/repositories/: candidates_repository.py  recordings_repository.py
service/app/routes/: candidates.py  recordings.py  users.py  video_processing.py
service/app/services/: gcs_service.py  video_processor.py
service/examples/: video_processing_example.py
service/test_scripts/: run_consumer.py  test_consumer.py
shared/: schema.ts
(+7 files in other folders)
