[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "google-cloud-storage>=3.2.0",
    "greenlet>=3.2.3",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "pika>=1.3.0",
    "pydantic>=2.0.0",
]
